レイアウト調整完了

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -195,12 +195,11 @@ ul {
 .link-item:hover{
   color: #00b300;
 }
-// 閲覧者用リンクボタンの装飾ここまで
 
 
 
 .table th, .table td {
-  border-top: none;
+  // border-top: none;
 }
 
 .table > tr {
