--- a/app/views/admins/categories/index.html.erb
+++ b/app/views/admins/categories/index.html.erb
@@ -1,7 +1,7 @@
-<section class="container w-50 mt-5">
+<section class="container mt-3">
 
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3 font-weight-bold">カテゴリー管理</h2>
+  <h2 class="section-ttl row ml-2 font-weight-bold">カテゴリー管理</h2>
 
   <!--カテゴリー追加フォーム-->
   <p>メンバー登録時に使用するカテゴリーを追加してください。</p>
@@ -16,7 +16,7 @@
     <div class="form_group row mb-3">
       <%= f.label :category_name, 'カテゴリー名', class: "form-label m-3 font-weight-bold" %>
       <%= f.text_field :category_name, class: "col-md-5 form-control m-3" %>
-      <%= f.submit "新規追加", class: "btn btn-outline-secondary m-3" %>
+      <%= f.submit "新規追加", class: "btn m-3" %>
     </div>
   <% end %>
 
