--- a/app/views/admins/game_results/edit.html.erb
+++ b/app/views/admins/game_results/edit.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">試合結果を編集してください。</h2>
+  <h2 class="section-ttl row mb-3 ml-2">試合結果を編集してください。</h2>
 
   <!--試合結果編集フォーム-->
   <%= form_with model: @game_result, url: "/admins/game_results/#{@game_result.id}", local:true do |f| %>
