--- a/app/views/admins/game_results/index.html.erb
+++ b/app/views/admins/game_results/index.html.erb
@@ -1,6 +1,6 @@
 <section class="container mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row justify-content-center">試合結果一覧</h2>
+  <h2 class="section-ttl row mb-3 ml-2">試合結果一覧</h2>
 
   <!--メンバー追加画面へのリンク-->
   <div>
