--- a/app/views/admins/graduates/index.html.erb
+++ b/app/views/admins/graduates/index.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">OB紹介一覧</h2>
+  <h2 class="section-ttl row mb-3 ml-2">OB紹介一覧</h2>
 
   <!--OB登録追加画面へのリンク-->
   <div>
