--- a/app/views/admins/graduates/new.html.erb
+++ b/app/views/admins/graduates/new.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">OB新規登録</h2>
+  <h2 class="section-ttl row mb-3 ml-2">OB新規登録</h2>
 
   <!--メンバー追加フォーム-->
     <%= form_with model: @graduate, url: '/admins/graduates', local:true do |f| %>
