--- a/app/views/admins/guardians/index.html.erb
+++ b/app/views/admins/guardians/index.html.erb
@@ -1,6 +1,6 @@
 <section class="container mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">保護者一覧</h2>
+  <h2 class="section-ttl row mb-3 ml-2">保護者一覧</h2>
   
   <!-- サクセスメッセージの表示 -->
   <p id="notice" class="text-danger">
