--- a/app/views/admins/informations/edit.html.erb
+++ b/app/views/admins/informations/edit.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">お知らせを編集してください。</h2>
+  <h2 class="section-ttl row mb-3 ml-2">お知らせを編集してください。</h2>
 
   <!--お知らせ編集フォーム-->
     <%= form_with model: @information, url: "/admins/informations/#{@information.id}", local:true do |f| %>
