--- a/app/views/admins/items/index.html.erb
+++ b/app/views/admins/items/index.html.erb
@@ -1,6 +1,6 @@
-<section class="container w-50 mt-5">
+<section class="container mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">応援グッズ一覧</h2>
+  <h2 class="section-ttl row mb-3 ml-2">応援グッズ一覧</h2>
 
   <!--応援グッズ追加画面へのリンク-->
   <div>
