--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">アイテム登録</h2>
+  <h2 class="section-ttl row mb-3 ml-2">アイテム登録</h2>
 
   <!--応援グッズ投稿フォーム-->
   <%= form_with model: @item, url: "/admins/items", local:true do |f| %>
