--- a/app/views/admins/members/edit.html.erb
+++ b/app/views/admins/members/edit.html.erb
@@ -1,6 +1,6 @@
 <section class="container w-80 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">メンバー情報を編集してください。</h2>
+  <h2 class="section-ttl row mb-3 ml-2">メンバー情報を編集してください。</h2>
 
   <!--メンバー編集フォーム-->
   <%= form_with model: @member, url: "/admins/members/#{@member.id}", local:true do |f| %>
