--- a/app/views/admins/members/new.html.erb
+++ b/app/views/admins/members/new.html.erb
@@ -1,6 +1,6 @@
 <section class="container w-80 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">メンバー新規登録</h2>
+  <h2 class="section-ttl row mb-3 ml-2">メンバー新規登録</h2>
 
   <!--メンバー追加フォーム-->
   <%= form_with model: @member, url: '/admins/members', local:true do |f| %>
