--- a/app/views/admins/members/show.html.erb
+++ b/app/views/admins/members/show.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">スタッフ・選手詳細</h2>
+  <h2 class="section-ttl row mb-3 ml-2">スタッフ・選手詳細</h2>
   
   <!-- サクセスメッセージの表示 -->
   <p id="notice" class="text-danger">
