--- a/app/views/admins/orders/show.html.erb
+++ b/app/views/admins/orders/show.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">注文詳細</h2>
+  <h2 class="section-ttl row mb-3 ml-2">注文詳細</h2>
 
   <!-- サクセスメッセージの表示 -->
   <p id="notice" class="text-danger">
@@ -95,5 +95,7 @@
       </tbody>
     </table>
   </div>
+  
+  <%= link_to "戻る", admins_orders_path, class: "btn m-3" %>
 
 </section>
