--- a/app/views/admins/game_results/new.html.erb
+++ b/app/views/admins/game_results/new.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">試合結果の登録</h2>
+  <h2 class="section-ttl row mb-3 ml-2">試合結果の登録</h2>
 
   <!--試合結果フォーム-->
   <%= form_with model: @game_result, url: "/admins/game_results", local:true do |f| %>
