--- a/app/views/admins/graduates/edit.html.erb
+++ b/app/views/admins/graduates/edit.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">OB情報を編集してください。</h2>
+  <h2 class="section-ttl row mb-3 ml-2">OB情報を編集してください。</h2>
 
   <!--OB編集フォーム-->
   <%= form_with model: @graduate, url: "/admins/graduates/#{@graduate.id}", local:true do |f| %>
