--- a/app/views/admins/guardians/edit.html.erb
+++ b/app/views/admins/guardians/edit.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">保護者情報を編集してください。</h2>
+  <h2 class="section-ttl row mb-3 ml-2">保護者情報を編集してください。</h2>
 
   <!--保護者編集フォーム-->
   <%= form_with model: @guardian, url: "/admins/guardian/#{@guardian.id}", local: true do |f| %>
