--- a/app/views/admins/information_for_guardians/new.html.erb
+++ b/app/views/admins/information_for_guardians/new.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">保護者専用お知らせ登録</h2>
+  <h2 class="section-ttl row mb-3 ml-2">保護者専用お知らせ登録</h2>
 
   <!--保護者専用お知らせ登録フォーム-->
   <%= form_with model: @informationforguardian, url: "/admins/information_for_guardians", local:true do |f| %>
