--- a/app/views/admins/informations/index.html.erb
+++ b/app/views/admins/informations/index.html.erb
@@ -1,6 +1,6 @@
 <section class="container mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">お知らせ一覧</h2>
+  <h2 class="section-ttl row mb-3 ml-2">お知らせ一覧</h2>
 
   <!--メンバー追加画面へのリンク-->
   <div>
