--- a/app/views/admins/informations/new.html.erb
+++ b/app/views/admins/informations/new.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">お知らせの登録</h2>
+  <h2 class="section-ttl row mb-3 ml-2">お知らせの登録</h2>
 
   <!--お知らせ登録フォーム-->
   <%= form_with model: @information, url: "/admins/informations/#{@information.id}", local:true do |f| %>
