--- a/app/views/admins/items/edit.html.erb
+++ b/app/views/admins/items/edit.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">応援グッズを編集してください。</h2>
+  <h2 class="section-ttl row mb-3 ml-2">応援グッズを編集してください。</h2>
 
   <!--応援グッズ編集フォーム-->
   <%= form_with model: @item, url: "/admins/items/#{@item.id}", local:true do |f| %>
