--- a/app/views/admins/members/index.html.erb
+++ b/app/views/admins/members/index.html.erb
@@ -1,6 +1,7 @@
 <section class="container col-md-5 mt-5">
+  
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">選手・スタッフ一覧</h2>
+  <h2 class="section-ttl row mb-3 ml-2">選手・スタッフ一覧</h2>
 
   <!--メンバー追加画面へのリンク-->
   <div>
