--- a/app/views/guardians/information_for_guardians/index.html.erb
+++ b/app/views/guardians/information_for_guardians/index.html.erb
@@ -1,15 +1,20 @@
 <section class="container mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">保護者専用お知らせ一覧</h2>
+  <h3 class="row section-ttl justify-content-center mb-5">
+    <span>保護者専用お知らせ一覧</span>
+  </h3>
+  <!-- サクセスメッセージの表示 -->
+  <p id="notice" class="text-danger">
+    <%= notice %>
+  </p>
 
   <!--お知らせ一覧-->
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-striped table-bordered">
       <thead>
         <tr>
           <th>更新日</th>
           <th>タイトル</th>
-          <th></th>
           <th></th>
         </tr>
       </thead>
