レイアウト　詳細ページ戻るボタン追加

--- a/app/views/game_results/show.html.erb
+++ b/app/views/game_results/show.html.erb
@@ -34,5 +34,9 @@
       </tbody>
     </table>
   </div>
+  
+  <div class="row justify-content-end">
+    <%= link_to "戻る", game_results_path, class: "btn btn-outline-secondary" %>
+  </div>
 
 </section>
