--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,10 +1,7 @@
-
-
-
 <section class="member-content container mt-5">
   <!--セクションタイトル-->
   <h3 class="row section-ttl justify-content-center mb-5">
-    <span>選手・スタッフ一覧</span>
+    <span>青山高校サッカー部応援グッズ</span>
   </h3>
 
   <!--メンバー追加画面へのリンク-->
