--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -33,5 +33,8 @@
       </tbody>
     </table>
   </div>
+  <div class="row justify-content-end">
+    <%= link_to "戻る", events_path, class: "btn btn-outline-secondary" %>
+  </div>
 
 </section>
