--- a/app/views/graduates/show.html.erb
+++ b/app/views/graduates/show.html.erb
@@ -36,5 +36,8 @@
       </tbody>
     </table>
   </div>
+  <div class="row justify-content-end">
+    <%= link_to "戻る", graduates_path, class: "btn btn-outline-secondary" %>
+  </div>
 
 </section>
