--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -1,4 +1,4 @@
-<section class="container col-md-5 mt-5">
+<section class="container mt-5">
   <!--セクションタイトル-->
   <h2 class="section-ttl row mb-3">注文内容を確認してください。</h2>
 
