画像表示コード修正中

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -6,7 +6,7 @@
   </h3>
   <!--学校説明-->
   <div class="row justify-content-center mb-5">
-    <img src="/assets/about/about.jpg" alt="青山高校サッカー部" class="img-fluid"></a>
+    <%= image_tag asset_path("about/about.jpg", alt: "青山高校サッカー部"), class: "img-fluid" %>
     <p>学校法人青山学園青山高等学校は、今年で創設90年を迎える伝統ある学校です。<br>
     また、サッカー部は今年で創部50年を迎えることができました。<br>
     全国大会出場を目標に、精一杯頑張っていきますので応援よろしくお願いいたします。<br>
@@ -19,7 +19,7 @@
   </h3>
   <!--過去の功績-->
   <div class="row justify-content-center">
-    <img src="/assets/about/team.jpg" alt="青山高校サッカー部", class="img-fluid"></a>
+    <%= image_tag asset_path("about/team.jpg", alt: "青山高校サッカー部"), class: "img-fluid" %>
   </div>
   <div class="row justify-content-center mb-5">
     <ul class="list-unstyled">
@@ -36,7 +36,7 @@
   </h3>
   <!--練習環境について説明-->
   <div class="row justify-content-center mb-5">
-    <img src="/assets/about/ground.jpg" alt="青山高校サッカー部", class="img-fluid"></a>
+    <%= image_tag asset_path("about/ground.jpg", alt: "青山高校サッカー部"), class: "img-fluid" %>
     <p>キャンパス内に併設された人工芝のグランドを利用してます。<br>
     照明設備があり、昼間でも夜間でも練習や試合を行うことができます。<br>
     その他、ミーティングルームやトレーニングルームがあり、<br>
