--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -8,7 +8,7 @@
     <div class="row justify-content-center">
       <!--メンバー画像-->
       <div class="mr-4">
-        <%= attachment_image_tag @member, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
+        <%= attachment_image_tag @member, :image, :fill, 300, 300, fallback: asset_path("no_image.jpg"), size:'300x300' %>
       </div>
       <!--メンバー詳細説明-->
       <div class="font-weight-bold ml-4">
