--- a/app/views/guardians/information_for_guardians/show.html.erb
+++ b/app/views/guardians/information_for_guardians/show.html.erb
@@ -6,7 +6,7 @@
 
   <!--保護者専用お知らせ詳細-->
   <div class="row justify-content-center m-5 p-2">
-    <%= attachment_image_tag  @informationforguardian, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
+    <%= attachment_image_tag  @informationforguardian, :image, :fill, 300, 250, fallback: "noImage.jpg", size:'300x250' %>
   </div>
 
   <div class="row justify-content-center bg-light p-2">
