--- a/app/views/admins/informations/show.html.erb
+++ b/app/views/admins/informations/show.html.erb
@@ -9,7 +9,7 @@
 
   <!--お知らせ詳細-->
   <div class="row justify-content-center m-5">
-    <%= attachment_image_tag  @information, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
+    <%= attachment_image_tag  @information, :image, :fill, 300, 250, fallback: asset_path("noImage.jpg"), size:'300x250' %>
   </div>
 
   <div class="roe justify-content-center bg-light">
