--- a/app/views/admins/members/show.html.erb
+++ b/app/views/admins/members/show.html.erb
@@ -1,7 +1,7 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
   <h2 class="section-ttl row mb-3 ml-2">スタッフ・選手詳細</h2>
-  
+
   <!-- サクセスメッセージの表示 -->
   <p id="notice" class="text-danger">
     <%= notice %>
@@ -11,7 +11,7 @@
     <div class="row justify-content-center">
       <!--メンバー画像-->
       <div class="col-md-6 col-sm-12">
-        <%= attachment_image_tag @member, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
+        <%= attachment_image_tag @member, :image, :fill, 300, 300, fallback: asset_path("no_image.jpg"), size:'300x300' %>
       </div>
       <!--メンバー詳細説明-->
       <div class="col-md-6 col-sm-12 font-weight-bold pt-5">
