--- a/app/views/game_results/show.html.erb
+++ b/app/views/game_results/show.html.erb
@@ -6,7 +6,7 @@
 
   <!--試合結果詳細-->
   <div class="row justify-content-center m-5">
-    <%= attachment_image_tag  @game_result, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
+    <%= attachment_image_tag  @game_result, :image, :fill, 300, 300, fallback: asset_path("noImage.jpg"), size:'300x300' %>
   </div>
 
   <!--OB詳細説明-->
@@ -34,7 +34,7 @@
       </tbody>
     </table>
   </div>
-  
+
   <div class="row justify-content-end">
     <%= link_to "戻る", game_results_path, class: "btn btn-outline-secondary" %>
   </div>
