--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -12,7 +12,7 @@
         <article class="card mt-4 shadow" style="max-width: 20rem;">
             <!--カード上部に画像を表示-->
             <%= link_to item_path(item.id) do %>
-              <%= attachment_image_tag item, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300', class: "card-img-button" %>
+              <%= attachment_image_tag item, :image, :fill, 300, 250, fallback: asset_path("noImage.jpg"), size:'300x250', class: "card-img-button" %>
             <% end %>
             <!--カード本文-->
             <div class="card-body">
@@ -26,16 +26,16 @@
     </div>
   </div>
 
-  
+
   <!--ページネーション-->
   <div class="row justify-content-center mt-5">
     <%= paginate @items %>
   </div>
-  
+
   <p>応援グッズの売り上げの一部は、青山学校サッカー部の活動資金に充てさせて頂きます。<br>
     ・活動運営費の不足分<br>
     ・スポーツドリンクなどのサポート補食費<br>
     など<br>
   </p>
-  
+
 </section>
