カテゴリ画面テスト

--- a/app/views/admins/homes/top.html.erb
+++ b/app/views/admins/homes/top.html.erb
@@ -11,7 +11,7 @@
       <%= notice %>
     </p>
     <div class="menu_box">
-      <%= link_to "カテゴリー管理", admins_categories_path, class: "top_link" %>
+      <%= link_to "カテゴリ管理", admins_categories_path, class: "top_link" %>
       <p class="mt-2">選手・スタッフの登録で使用するカテゴリを設定します。</p>
     </div>
     <div class="menu_box">
