選手・スタッフ統合テスト

--- a/app/views/admins/members/index.html.erb
+++ b/app/views/admins/members/index.html.erb
@@ -5,7 +5,7 @@
 
   <!--メンバー追加画面へのリンク-->
   <div>
-    <%= link_to "スタッフ・選手を登録する", new_admins_member_path, class: "btn m-3" %>
+    <%= link_to "選手・スタッフを登録する", new_admins_member_path, class: "btn m-3" %>
   </div>
   
   <%= form_with url: import_admins_members_path do |f| %>
