--- a/app/views/admins/events/new.html.erb
+++ b/app/views/admins/events/new.html.erb
@@ -1,9 +1,9 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
   <h2 class="section-ttl row mb-3">スケジュールを登録</h2>
- 
+
   <%= form_with model: @event, url: "/admins/events", local: true do |f| %>
-  
+
   <!--エラーメッセージ-->
   <%= render 'layouts/error_messages', model: f.object %>
 
@@ -14,7 +14,7 @@
       <%= f.text_field :title, class: "form-control" %>
     </div>
   </div>
-  
+
   <!--開始時間-->
   <div class="row">
     <div class="form-group col-md-4">
@@ -22,7 +22,7 @@
       <%= f.datetime_field :start_time, class: "form-control" %>
     </div>
   </div>
-  
+
   <!--終了時間-->
   <div class="row">
     <div class="form-group col-md-4">
@@ -30,15 +30,15 @@
       <%= f.datetime_field :end_time, class: "form-control" %>
    </div>
  </div>
- 
+
  <div class="form_group">
    <%= f.label :content, "内容", class: "form-label" %>
    <%= f.text_area :content, class: "form-control", rows: "20" %>
  </div>
- 
+
   <div class="row">
     <div class="form-group">
-    <%= f.submit "変更を保存", class: "btn btn-outline-secondary m-3" %>
+    <%= f.submit "新規登録", class: "btn btn-outline-secondary m-3" %>
     </div>
   </div>
 
