--- a/app/views/admins/informations/index.html.erb
+++ b/app/views/admins/informations/index.html.erb
@@ -4,7 +4,7 @@
 
   <!--メンバー追加画面へのリンク-->
   <div>
-    <%= link_to "試合結果を登録する", new_admins_information_path, class: "btn btn-outline-secondary m-3" %>
+    <%= link_to "お知らせを登録する", new_admins_information_path, class: "btn btn-outline-secondary m-3" %>
   </div>
 
   <!-- サクセスメッセージの表示 -->
