--- a/app/views/admins/items/index.html.erb
+++ b/app/views/admins/items/index.html.erb
@@ -4,7 +4,7 @@
 
   <!--応援グッズ追加画面へのリンク-->
   <div>
-    <%= link_to "アイテム登録", new_admins_item_path, class: "btn btn-outline-secondary m-3" %>
+    <%= link_to "応援グッズを登録する", new_admins_item_path, class: "btn btn-outline-secondary m-3" %>
   </div>
 
   <!-- サクセスメッセージの表示 -->
