--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -50,7 +50,7 @@
 
     <div class="row">
       <div class="form-group">
-      <%= f.submit "変更を保存", class: "btn btn-outline-secondary m-3" %>
+      <%= f.submit "登録する", class: "btn btn-outline-secondary m-3" %>
       </div>
     </div>
 
