--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -22,7 +22,7 @@
       </thead>
       <tbody>
         <tr>
-    			<td>アイテム名</td>
+    			<td>商品名</td>
     			<td><%= @item.name %></td>
         </tr>
         <tr>
