--- a/app/views/admins/homes/top.html.erb
+++ b/app/views/admins/homes/top.html.erb
@@ -1,7 +1,7 @@
 <section class="container">
   <!--セクションタイトル-->
   <h3 class="row section-ttl justify-content-center mb-5">
-    <span>管理者MENU</span>
+    <span>管理MENU</span>
   </h3>
 
   <div class="row justify-content-center">
