--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -33,4 +33,8 @@
     </div>
   </div>
 
+  <div class="row justify-content-end">
+    <%= link_to "戻る", items_path, class: "btn btn-outline-secondary" %>
+  </div>
+
 </section>
