注文更新の結合テスト追記

--- a/app/views/admins/orders/show.html.erb
+++ b/app/views/admins/orders/show.html.erb
@@ -22,6 +22,10 @@
     			<td><%= @order.name %></td>
         </tr>
         <tr>
+    			<td>メールアドレス</td>
+    			<td><%= @order.email %></td>
+        </tr>
+        <tr>
     			<td>受付日</td>
     			<td><%= @order.created_at.strftime("%Y-%m-%d %H:%M") %></td>
         </tr>
