--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -47,7 +47,7 @@
 
   <%= f.hidden_field :product_passing, value: @order.product_passing %>
   <%= f.hidden_field :email, value: @order.email %>
-  <%= f.hidden_field :other, value: @order.email %>
+  <%= f.hidden_field :other, value: @order.other %>
   <%= f.hidden_field :postal_code, value: @order.postal_code %>
   <%= f.hidden_field :address, value: @order.address %>
   <%= f.hidden_field :name, value: @order.name %>
