統合テスト完了

--- a/app/views/contact_mailer/contact_mail.html.erb
+++ b/app/views/contact_mailer/contact_mail.html.erb
@@ -1,13 +1,19 @@
-<h5><%= @contact.name %></h5>
-<h2>お問い合わせ内容  </h2>
-<p>
+<h5><%= @contact.name %> 様</h5>
+
+<h5>お問い合わせ内容</h5>
+<p>－－－－－－－－－－－－－<br>
   <%= @contact.content %><br>
 </p>
 
 <p>
   お問い合わせありがとうございます。<br>
+  後日担当者よりご連絡いたしますので、<br>
+  しばらくお待ちください。
 </p>
 
 <p>
-  管理者
+  －－－－－－－－－－－－－<br>
+  AOYAMAFOOTBALLCLUB<br>
+  aoyamafootball11@gmail.com
+  －－－－－－－－－－－－－<br>
 </p>
